--- a/source/css/_common/components/post/post-reward.styl
+++ b/source/css/_common/components/post/post-reward.styl
@@ -34,11 +34,14 @@
     border:0;
 }
 #QR img{
-    width: 180px;
+    width: 178px;
     max-width: 100%;
     display: inline-block;
     margin: 0.8em 2em 0 2em;
+    border: 1px solid #CCC
 }
+/*
+二维码动画
 #QR > div:hover p {
   animation: roll 0.1s infinite linear;
   -webkit-animation: roll 0.1s infinite linear;
@@ -51,4 +54,4 @@
     to {
       transform(rotateZ(-30deg));
     }
-}
+}*/
