--- a/source/css/_custom/custom.styl
+++ b/source/css/_custom/custom.styl
@@ -1,1 +1,65 @@
 // Custom styles.
+#comments {
+    margin-top: 12px;
+    position: relative;
+    a {
+        border: none;
+    }
+}
+
+img.emojione {
+    display: inline-block;
+}
+
++mobile() {
+    .post-copyright {
+        font-size: 14px;
+    }
+}
+
+.headband {
+    display: none;
+}
+
+.no-doodle-support {
+    background: $gainsboro;
+    css-doodle {
+        display: none;
+    }
+    .back-to-top,
+    .sidebar,
+    {
+        background: $gainsboro;
+    }
+}
+
+.doodle-support {
+    .post-block,
+    .header-inner,
+    .sidebar-inner,
+    .comments {
+        opacity: .93 !important;
+    }
+    .header {
+        z-index: 1;
+    }
+    .footer a {
+        color: white;
+        opacity: .93;
+    }
+}
+
+/*网站头部鼠标穿透*/
+
+.site-meta {
+    pointer-events: none;
+}
+
+.site-meta span {
+    pointer-events: auto;
+}
+
+.site-title,
+.site-subtitle {
+    text-shadow: 1px 1px 3px #000;
+}
